added reactive-element support

--- a/components/examples.html
+++ b/components/examples.html
@@ -3,18 +3,12 @@
 		<script type="text/javascript" src="../../bower_components/react/react.js"></script>
 		<script type="text/javascript" src="../../bower_components/react/JSXTransformer.js"></script>
 		<script type="text/javascript" src="../../bower_components/HTMLImports/src/html-imports.js"></script>
+		<script src="../../bower_components/CustomElements/src/custom-elements.js"></script>
+		<script src="../../bower_components/ReactiveElements/src/reactive-elements.js"></script>
+
 		<link rel="import" type="text/html" href="../../dist/components/my-button/index.html" />
-
-
-		<script type="text/jsx">
-			/** @jsx React.DOM */
-			window.addEventListener('HTMLImportsLoaded', function(e) {
-				React.renderComponent( my_button(), document.getElementById('container'));
-			});
-		</script>
-
 	</head>
 	<body id="container">
-
+		<my-button />
 	</body>
 </html>
