--- a/components/examples.html
+++ b/components/examples.html
@@ -1,12 +1,8 @@
 <html>
 	<head>
-		<script type="text/javascript" src="../../bower_components/react/react.js"></script>
-		<script type="text/javascript" src="../../bower_components/react/JSXTransformer.js"></script>
-		<script type="text/javascript" src="../../bower_components/HTMLImports/src/html-imports.js"></script>
-		<script src="../../bower_components/CustomElements/src/custom-elements.js"></script>
-		<script src="../../bower_components/ReactiveElements/src/reactive-elements.js"></script>
+		<script type="text/javascript" src="react-component.js"></script>
 
-		<link rel="import" type="text/html" href="../../dist/components/my-button/index.html" />
+		<link rel="import" type="text/html" href="components/my-button/index.html" />
 	</head>
 	<body id="container">
 		<my-button />
