--- a/components/examples.html
+++ b/components/examples.html
@@ -3,8 +3,10 @@
 		<script type="text/javascript" src="react-component.js"></script>
 
 		<link rel="import" type="text/html" href="components/my-button/index.html" />
+  <link rel="import" type="text/html" href="components/navbar/index.html" />
 	</head>
 	<body id="container">
-		<my-button />
+  <v-navbar></v-navbar> 
+		<v-button></v-button> 
 	</body>
 </html>
